syntax = "proto3";

package user;

service UserService {
  rpc CreateUser (UserRequest) returns (UserResponse);
  
  rpc GetUser (UserRequest) returns (UserResponse);
  
  rpc Login (LoginRequest) returns (LoginResponse);
}

message UserRequest {
  string username = 1;
  string email = 2;
  int32 age = 3;
  string password = 4;  // Password field for creating a user
  int32 user_id = 5;  // For GetUser request, to retrieve user by ID
}

message UserResponse {
  int32 user_id = 1;
  string username = 2;
  string email = 3;
  int32 age = 4;
  string message = 5;  // For CreateUser response or error message
}

message LoginRequest {
  string username = 1;
  string password = 2;  // Password to validate for login
}

message LoginResponse {
  bool success = 1;  // Indicates if login is successful
  string message = 2;  // Login success/failure message
}